# claude-code-plugins

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  prompt-compression-interview.md  pyproject.toml
.agents/skills/: learn-define-patterns  sync-manifest-dev  tend-pr  tend-pr-tick
.claude/: .manifest-dev-sync.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: prompt-compression-verifier.md  prompt-reviewer.md  prompt-token-efficiency-verifier.md
.claude/skills/: auto-optimize-prompt  compress-prompt  optimize-prompt-token-efficiency  prompt-engineering  review-prompt
.manifest/: define-discovery-20260427-141139.md  do-log-20260427-141139.md  manifest-20260427-141139.md
claude-plugins/: README.md
claude-plugins/PLUGIN_TEMPLATE/: README.md
claude-plugins/consultant/: MODEL_SELECTION_GUIDE.md  README.md  requirements.txt
claude-plugins/dev-workflow/: README.md
claude-plugins/frontend-design/: README.md
claude-plugins/human-writer/: README.md
claude-plugins/life-ops/: README.md
claude-plugins/marketing/: README.md
claude-plugins/oracle/: README.md
claude-plugins/vibe-experimental/hooks/: hook_utils.py  pretool_escalate_hook.py  pyproject.toml  stop_do_hook.py  stop_implement_hook.py
claude-plugins/vibe-workflow/hooks/: hook_utils.py  post_compact_hook.py  post_todo_write_hook.py  pyproject.toml  session_start_reminder.py  stop_todo_enforcement.py
docs/: BREAD_MAKING_BIBLE.md  CUSTOMER.md  LLM_CODING_CAPABILITIES.md  LLM_TRAINING.md  PROMPTING.md
scripts/: apply_skill_workaround.py
(+285 files in other folders)
