[project]
name = "vibe-workflow-hooks"
version = "0.1.0"
description = "Hooks for vibe-workflow plugin"
requires-python = ">=3.10"

[project.scripts]
session-start-reminder = "session_start_reminder:main"
stop-todo-enforcement = "stop_todo_enforcement:main"
post-compact-hook = "post_compact_hook:main"
post-todo-write-hook = "post_todo_write_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
